# ChunkPool

./: CMakeLists.txt  Main.cpp  MemHelp.hpp  ObjectPool.hpp  README.md  TypePool.hpp
include/: BitHelper.hpp  CMakeLists.txt  ChunkPool.hpp  FlatStack.hpp  MemHelp.hpp  ObjectPool.hpp  ThreadSequencer.hpp  TypePool.hpp
test/allocation/: CMakeLists.txt
test/threading/: CMakeLists.txt  Main.cpp
testing/allocation/: CMakeLists.txt  Main.cpp
testing/threading/: CMakeLists.txt  Main.cpp
testing/unittest/: CMakeLists.txt  ChunkPoolTest.cpp  Main.cpp  TypePoolTest.cpp
testing/visualizer/: CMakeLists.txt  Main.cpp  VisualizerPool.cpp  VisualizerPool.hpp
