cmake_minimum_required(VERSION 3.4)

project(ObjectPool C CXX)

add_subdirectory("include")

option(OBJECTPOOL_TESTING "ObjectPool testing main" ON)

if(OBJECTPOOL_TESTING)
	if(MSVC)
		foreach(OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES})
			string(TOUPPER ${OUTPUTCONFIG} OUTPUTCONFIG)
			set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_${OUTPUTCONFIG} "${CMAKE_SOURCE_DIR}/bin")
			set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_${OUTPUTCONFIG} "${CMAKE_SOURCE_DIR}/bin")
			set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_${OUTPUTCONFIG} "${CMAKE_SOURCE_DIR}/bin")
		endforeach(OUTPUTCONFIG CMAKE_CONFIGURATION_TYPES)
	else(MSVC)
		set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin")
		set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin")
		set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin")
	endif(MSVC)
	
	add_subdirectory("test/allocation")
	add_subdirectory("test/threading")
endif(OBJECTPOOL_TESTING)