cmake_minimum_required(VERSION 3.4)

project("ChunkPool" C CXX)

include("functions.cmake")

option(OBJECTPOOL_TESTING "ChunkPool testing" ON)

add_subdirectory("thirdparty")

add_subdirectory("include")

if(OBJECTPOOL_TESTING)
	set_property(GLOBAL PROPERTY USE_FOLDERS ON)
	
	if(MSVC)
		foreach(OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES})
			string(TOUPPER ${OUTPUTCONFIG} OUTPUTCONFIG)
			set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_${OUTPUTCONFIG} "${CMAKE_SOURCE_DIR}/bin")
			set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_${OUTPUTCONFIG} "${CMAKE_SOURCE_DIR}/bin")
			set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_${OUTPUTCONFIG} "${CMAKE_SOURCE_DIR}/bin")
		endforeach(OUTPUTCONFIG CMAKE_CONFIGURATION_TYPES)
	else(MSVC)
		set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin")
		set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin")
		set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin")
	endif(MSVC)
	
	add_subdirectory("testing/visualizer")
endif(OBJECTPOOL_TESTING)